# Shipwright-Android

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  build.gradle  gradle.properties
.github/workflows/: generate-release.yml  project_build.yml
Android/: gradle.properties
Android/app/: build.gradle
CMake/: Packaging-2.cmake  Packaging.cmake  soh-cvars.cmake
app/: build.gradle
app/jni/: CMakeLists.txt
app/jni/SDL2/: CMakeLists.txt  Makefile  Makefile.rules  SDL2.spec  VERSION.txt  config.status  libtool  sdl2-config  sdl2-config-version.cmake  sdl2.pc
app/jni/SDL2/include/: SDL_config.h
app/jni/SDL2_mixer/: SDL2_mixer.spec
app/jni/src/: CMakeLists.txt
app/jni/src/OTRExporter/: extract_assets.py
app/jni/src/OTRExporter/OTRExporter/: DisplayListExporter.cpp  Main.cpp
app/jni/src/ZAPDTR/ZAPD/: CMakeLists.txt  CrashHandler.cpp  Globals.h  Main.cpp  ZResource.cpp
app/jni/src/libultraship/: .clang-tidy  .gitignore  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md
app/jni/src/libultraship/.github/workflows/: build-validation.yml  tidy-format-validation.yml  tidy-result-publish.yml
app/jni/src/libultraship/cmake/: DefaultCXX.cmake  HandleCompilerRT.cmake
app/jni/src/libultraship/include/libultraship/: bridge.h  classes.h  color.h  libultra.h  libultraship.h  luslog.h
app/jni/src/libultraship/include/libultraship/libultra/: abi.h  controller.h  convert.h  exception.h  gbi.h  gs2dex.h  internal.h  mbi.h  message.h  pfs.h  pi.h  r4300.h  rcp.h  rsp.h  sptask.h  thread.h  types.h  vi.h
app/jni/src/libultraship/src/: CMakeLists.txt  Context.cpp  Context.h  install_config.h.in
app/jni/src/libultraship/src/audio/: Audio.cpp  Audio.h  AudioPlayer.cpp  AudioPlayer.h  PulseAudioPlayer.cpp  PulseAudioPlayer.h  SDLAudioPlayer.cpp  SDLAudioPlayer.h  WasapiAudioPlayer.cpp  WasapiAudioPlayer.h
app/jni/src/libultraship/src/config/: Config.cpp  Config.h  ConsoleVariable.cpp  ConsoleVariable.h
app/jni/src/libultraship/src/controller/: ControlDeck.cpp  ControlDeck.h  Controller.cpp  Controller.h  DummyController.cpp  DummyController.h  KeyboardController.cpp  KeyboardController.h  KeyboardScancodes.h  SDLController.cpp  SDLController.h
app/jni/src/libultraship/src/debug/: Console.cpp  Console.h  CrashHandler.cpp  CrashHandler.h
app/jni/src/libultraship/src/graphic/Fast3D/: README.md  gfx_cc.h  gfx_direct3d11.cpp  gfx_direct3d11.h  gfx_direct3d12.cpp  gfx_direct3d12_guids.h  gfx_direct3d_common.cpp  gfx_direct3d_common.h  gfx_dxgi.cpp  gfx_dxgi.h  gfx_gx2.cpp  gfx_metal.cpp  gfx_metal.h  gfx_metal_shader.cpp  gfx_metal_shader.h  gfx_opengl.cpp  gfx_pc.cpp  gfx_pc.h  gfx_rendering_api.h  gfx_sdl2.cpp  gfx_wiiu.cpp  gfx_wiiu.h  gfx_window_manager_api.h  gx2_shader_gen.c  gx2_shader_gen.h  gx2_shader_inl.h
app/jni/src/libultraship/src/graphic/Fast3D/dxsdk/: d3d12.h  d3d12sdklayers.h  d3dcommon.h  d3dx12.h
app/jni/src/libultraship/src/log/: luslog.cpp  luslog.h
app/jni/src/libultraship/src/port/switch/: SwitchImpl.cpp  SwitchImpl.h  SwitchPerformanceProfiles.h
app/jni/src/libultraship/src/port/wiiu/: WiiUController.cpp  WiiUController.h  WiiUGamepad.cpp  WiiUGamepad.h  WiiUImpl.cpp  WiiUImpl.h
app/jni/src/libultraship/src/public/bridge/: audiobridge.cpp  audiobridge.h  consolevariablebridge.cpp  consolevariablebridge.h  controllerbridge.cpp  controllerbridge.h  crashhandlerbridge.cpp  crashhandlerbridge.h  resourcebridge.cpp  resourcebridge.h  windowbridge.cpp  windowbridge.h
app/jni/src/libultraship/src/public/libultra/: os.cpp  os.h
app/jni/src/libultraship/src/resource/: Archive.cpp  Archive.h  File.h  GameVersions.h  Resource.cpp  Resource.h  ResourceFactory.cpp  ResourceFactory.h  ResourceLoader.cpp  ResourceLoader.h  ResourceManager.cpp  ResourceManager.h  ResourceType.h
app/jni/src/libultraship/src/resource/factory/: ArrayFactory.cpp  ArrayFactory.h  BlobFactory.cpp  BlobFactory.h  DisplayListFactory.cpp  DisplayListFactory.h  MatrixFactory.cpp  MatrixFactory.h  TextureFactory.cpp  TextureFactory.h  VertexFactory.cpp  VertexFactory.h
app/jni/src/libultraship/src/resource/type/: Array.cpp  Array.h  Blob.h  DisplayList.cpp  DisplayList.h  Matrix.cpp  Matrix.h  Texture.cpp  Texture.h  Vertex.cpp  Vertex.h
app/jni/src/libultraship/src/utils/: OSXFolderManager.h  OSXFolderManager.mm  Utils.cpp  Utils.h  stox.cpp  stox.h
app/jni/src/libultraship/src/utils/binarytools/: BinaryReader.cpp  BinaryReader.h  BinaryWriter.cpp  BinaryWriter.h  FileHelper.h  MemoryStream.cpp  MemoryStream.h  PathHelper.h  Stream.cpp  Stream.h  endianness.h
app/jni/src/libultraship/src/window/: Window.cpp  Window.h
app/jni/src/libultraship/src/window/gui/: ConsoleWindow.cpp  ConsoleWindow.h  Fonts.h  GameOverlay.cpp  GameOverlay.h  Gui.cpp  Gui.h  GuiElement.cpp  GuiElement.h  GuiMenuBar.cpp  GuiMenuBar.h  GuiWindow.cpp  GuiWindow.h  IconsFontAwesome4.h  InputEditorWindow.cpp  InputEditorWindow.h  InputViewer.cpp  InputViewer.h  StatsWindow.cpp  StatsWindow.h
app/jni/src/soh/: .gitignore  CMakeLists.txt  properties.h
app/jni/src/soh/include/: functions.h  z64audio.h
app/jni/src/soh/soh/: OTRGlobals.cpp  OTRGlobals.h  SohGui.cpp  SohMenuBar.cpp
app/jni/src/soh/soh/Enhancements/: bootcommands.c
app/jni/src/soh/soh/Enhancements/randomizer/: randomizer_item_tracker.cpp
app/jni/src/soh/soh/Extractor/: Extract.cpp
app/jni/src/soh/src/boot/: build.c.in
app/jni/src/soh/src/code/: __osMalloc.c  audio_load.c  main.c  speed_meter.c  z_bgcheck.c  z_camera.c  z_message_PAL.c  z_skelanime.c
app/release/: output-metadata.json
docker/: Containerfile  Makefile  README.md
docker/scripts/: build_android_project.sh  build_container_image.sh  entrypoint.sh  install_container_image.sh  publish_container_image.sh  set_container_vars.sh
docs/: BUILDING.md  GAME_CONTROLLER_DB.md  MODDING.md  supportedHashes.json
gradle/wrapper/: gradle-wrapper.properties
soh/: .gitignore  CMakeLists.txt  properties.h
soh/assets/: .gitignore  soh_assets.h
soh/include/: functions.h  gfx.h  global.h  macros.h  message_data_fmt.h  variables.h  z64.h  (+6 more)
(+1421 files in other folders)
